# AIMentalHealth

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  lint.sh  mermaid1.md  package-lock.json  package.json  pyproject.toml  setup.cfg  start-app.sh
experimental/ai-mental-health/: README.md
experimental/ai-mental-health/backend/: app.db  pyproject.toml  requirements.txt  run.py
experimental/ai-mental-health/backend/app/: __init__.py  main.py
experimental/ai-mental-health/backend/app/api/: ai_communication.py  auth.py  deps.py  users.py
experimental/ai-mental-health/backend/app/core/: ai_config.py  config.py  security.py
experimental/ai-mental-health/backend/app/db/: init_db.py
experimental/ai-mental-health/backend/app/models/: contact.py  mood.py  user.py
experimental/ai-mental-health/backend/app/schemas/: user.py
experimental/ai-mental-health/backend/app/services/: ai_service.py
tests/: README.md  api-service.spec.ts  backend.spec.ts  e2e.spec.ts  frontend.spec.ts
