[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | backend/venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/venv/*", "*/site-packages/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
exclude = [
    "venv",
    "site-packages",
    "backend/venv",
]

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "fastapi.*", "pydantic.*", "starlette.*"]
ignore_missing_imports = true
